@@ -1136,7 +1136,6 @@ table.history td.caption{
 table.msgok{
 	width: 100%;
 	border: 1px #44CC44 solid;
-	margin-bottom: 2px;
 }
 
 table.msgok tr{
